# Snake_Game

./: .gitignore  CMakeLists.txt  Food.cpp  Food.h  FoodTest.cpp  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  LevelManager.h  Levelmanager.cpp  Levelmanager.h  Menu.cpp  Menu.h  Renderer.cpp  Renderer.h  ScoreManager.cpp  ScoreManager.h  Shared.h  Snake.cpp  Snake.h  SpecialFood.cpp  SpecialFood.h  game.cpp  game.h  main.cpp
